--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-memmap = "0.7.0"
-object = { version = "0.23.0", default-features = false, features = ["read_core", "archive", "macho", "std"] }
+goblin = "0.3.1"
