Update crate metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,12 @@
 name = "fat-macho"
 version = "0.1.0"
 authors = ["messense <messense@icloud.com>"]
+description = "Mach-O Fat Binary Reader and Writer"
+keywords = ["fat", "mach", "macho", "universal", "universal2"]
 edition = "2018"
+readme = "README.md"
+license = "MIT"
+repository = "https://github.com/messense/fat-macho-rs.git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
