--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,6 +33,14 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+      - name: Run cargo-tarpaulin
+        uses: actions-rs/tarpaulin@v0.1
+        with:
+          args: --all
+        if: matrix.os == 'ubuntu-latest'
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v1
+        if: matrix.os == 'ubuntu-latest'
 
   fmt:
     name: Rustfmt
