--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ repository = "https://github.com/messense/fat-macho-rs.git"
 [dependencies]
 goblin = "0.3"
 llvm-bitcode = "0.1.1"
+
+[workspace]
+members = [
+    ".",
+    "python"
+]
