Align Python package version with Rust crate

--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "fat-macho"
-version = "0.1.0"
+version = "0.4.2"
 authors = ["messense <messense@icloud.com>"]
 edition = "2018"
+license = "MIT"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
