--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fat-macho"
+name = "py-fat-macho"
 version = "0.4.2"
 authors = ["messense <messense@icloud.com>"]
 edition = "2018"
@@ -15,3 +15,6 @@ crate-type = ["cdylib"]
 [dependencies]
 fat-macho-rs = { package = "fat-macho", version = "0.4", path = ".." }
 pyo3 = { version = "0.13.2", features = ["abi3-py36", "extension-module"] }
+
+[package.metadata.maturin]
+name = "fat-macho"
