--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -17,7 +17,7 @@ name = "fat_macho"
 crate-type = ["cdylib"]
 
 [dependencies]
-fat-macho-rs = { package = "fat-macho", version = "0.4", path = ".." }
+fat-macho-rs = { package = "fat-macho", version = "0.4" }
 pyo3 = { version = "0.13.2", features = ["abi3-py36", "extension-module"] }
 
 [package.metadata.maturin]
