--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -6,19 +6,31 @@ on:
 
 jobs:
   Build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.platform.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        platform: [
+          { os: "macos-latest",   python-architecture: "x64", rust-target: "x86_64-apple-darwin" },
+          { os: "ubuntu-latest", python-architecture: "x64", rust-target: "x86_64-unknown-linux-gnu" },
+          { os: "windows-latest", python-architecture: "x64", rust-target: "x86_64-pc-windows-msvc" },
+          { os: "windows-latest", python-architecture: "x86", rust-target: "i686-pc-windows-msvc" },
+        ]
         python-version: [3.6]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-        architecture: 'x64'
+        architecture: ${{ matrix.platform.python-architecture }}
+    - name: Install Rust toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        target: ${{ matrix.platform.rust-target }}
+        profile: minimal
+        default: true
     - name: Build Wheels - Linux
-      if: startsWith(matrix.os, 'ubuntu')
+      if: startsWith(matrix.platform.os, 'ubuntu')
       env:
         PYTHON_VERSION: python${{ matrix.python-version }}
       run: |
@@ -27,14 +39,14 @@ jobs:
         pip install fat-macho --no-index --find-links dist --force-reinstall
 
     - name: Build Wheels - Windows
-      if: startsWith(matrix.os, 'windows')
+      if: startsWith(matrix.platform.os, 'windows')
       run: |
         pip install maturin
-        maturin build -i python --release --out dist -m python/Cargo.toml
+        maturin build -i python --release --out dist -m python/Cargo.toml --target ${{ matrix.platform.rust-target }}
         pip install fat-macho --no-index --find-links dist --force-reinstall
 
     - name: Build Wheels - macOS
-      if: startsWith(matrix.os, 'macos')
+      if: startsWith(matrix.platform.os, 'macos')
       run: |
         # Setup Xcode
         echo "PYO3_CROSS_LIB_DIR=/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.8/lib" >> "${GITHUB_ENV}"
@@ -59,7 +71,7 @@ jobs:
         path: dist
 
     - name: Publish package - Non-Linux
-      if: startsWith(github.ref, 'refs/tags/') && (startsWith(matrix.os, 'windows') || startsWith(matrix.os, 'macos'))
+      if: startsWith(github.ref, 'refs/tags/') && (startsWith(matrix.platform.os, 'windows') || startsWith(matrix.platform.os, 'macos'))
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.pypi_password }}
@@ -68,7 +80,7 @@ jobs:
           twine upload --skip-existing dist/*
 
     - name: Publish package - Linux
-      if: startsWith(github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
+      if: startsWith(github.ref, 'refs/tags/') && matrix.platform.os == 'ubuntu-latest'
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
