Set MACOSX_DEPLOYMENT_TARGET=10.9

--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -47,9 +47,11 @@ jobs:
 
     - name: Build Wheels - macOS
       if: startsWith(matrix.platform.os, 'macos')
+      env:
+        MACOSX_DEPLOYMENT_TARGET: '10.9'
+        PYO3_CROSS_LIB_DIR: /Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.8/lib
       run: |
         # Setup Xcode
-        echo "PYO3_CROSS_LIB_DIR=/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.8/lib" >> "${GITHUB_ENV}"
         sudo xcode-select -s /Applications/Xcode_12.3.app
         bindir="$(xcode-select --print-path)/Toolchains/XcodeDefault.xctoolchain/usr/bin"
         echo "CC=${bindir}/clang" >> "${GITHUB_ENV}"
