twine upload --skip-existing

--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -162,4 +162,4 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
           pip install --upgrade wheel pip setuptools twine
-          twine upload *
+          twine upload --skip-existing *
