Use manylinux2014-cross docker image to build aarch64 & armv7l wheels

--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -87,6 +87,10 @@ jobs:
         ]
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.6
+        architecture: x64
     - name: Build Wheels
       run: |
         echo 'curl --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
@@ -97,9 +101,12 @@ jobs:
         pip install fat-macho --no-index --find-links dist --force-reinstall
         python -c "import fat_macho"
         ' > build-wheel.sh
-        chmod +x build-wheel.sh
 
         docker run --rm -v "$PWD":/io -w /io quay.io/pypa/manylinux${{ matrix.platform.manylinux }}_${{ matrix.platform.arch }} bash build-wheel.sh
+    - name: Auditwheel Symbols
+      run: |
+        pip install auditwheel-symbols
+        auditwheel-symbols dist/*.whl
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
@@ -107,7 +114,7 @@ jobs:
         path: dist
 
   linux-cross:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         platform: [
@@ -119,33 +126,15 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: 3.6
-        architecture: x64
-    - name: Install Rust toolchain
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        target: ${{ matrix.platform.target }}
-        profile: minimal
-        default: true
-    - name: Install aarch64 cross compiler
-      if: matrix.platform.target == 'aarch64-unknown-linux-gnu'
-      run: |
-        sudo apt-get install -y gcc-aarch64-linux-gnu libc6-arm64-cross libc6-dev-arm64-cross
-        echo "TARGET_CC=aarch64-linux-gnu-gcc" >> "$GITHUB_ENV"
-        echo "TARGET_CXX=aarch64-linux-gnu-cpp" >> "$GITHUB_ENV"
-        echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> "$GITHUB_ENV"
-    - name: Install armv7 cross compiler
-      if: matrix.platform.target == 'armv7-unknown-linux-gnueabihf'
-      run: |
-        sudo apt-get install -y gcc-arm-linux-gnueabihf libc6-armhf-cross libc6-dev-armhf-cross
-        echo "TARGET_CC=arm-linux-gnueabihf-gcc" >> "$GITHUB_ENV"
-        echo "TARGET_CXX=arm-linux-gnueabihf-cpp" >> "$GITHUB_ENV"
-        echo "CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-linux-gnueabihf-gcc" >> "$GITHUB_ENV"
-    - name: Install maturin
-      run: pip install maturin
     - name: Build Wheels
       run: |
+        echo 'curl -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
+        source ~/.cargo/env
+        rustup target add ${{ matrix.platform.target }}
         maturin build -i python --release --out dist --no-sdist -m python/Cargo.toml --target ${{ matrix.platform.target }} --manylinux ${{ matrix.platform.manylinux }}
+        ' > build-wheel.sh
+
+        docker run --rm -v "$PWD":/io -w /io messense/manylinux2014-cross:${{ matrix.platform.arch }} bash build-wheel.sh
     - uses: uraimo/run-on-arch-action@v2.0.5
       name: Install built wheel
       with:
@@ -163,11 +152,16 @@ jobs:
           ls -lrth /artifacts
           pip3 install fat-macho --no-index --find-links /artifacts --force-reinstall
           python3 -c "import fat_macho"
+    - name: Auditwheel Symbols
+      run: |
+        pip install auditwheel-symbols
+        auditwheel-symbols dist/*.whl
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
         name: wheels
         path: dist
+
 
   release:
     name: Release
