--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -11,30 +11,29 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.6
+          python-version: 3.9
           architecture: x64
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: aarch64-apple-darwin
           profile: minimal
           default: true
-      - name: Install maturin
-        run: pip install maturin
       - name: Build wheels - x86_64
+        uses: messense/maturin-action@v1
+        with:
+          target: x86_64-apple-darwin
+          args: --release --out dist -m python/Cargo.toml
+      - name: Install built wheel - x86_64
         run: |
-          maturin build -i python --target x86_64-apple-darwin --release --out dist -m python/Cargo.toml
           pip install fat-macho --no-index --find-links dist --force-reinstall
           python -c "import fat_macho"
       - name: Build wheels - universal2
-        env:
-          DEVELOPER_DIR: /Applications/Xcode.app/Contents/Developer
-          MACOSX_DEPLOYMENT_TARGET: '10.9'
-          PYO3_CROSS_LIB_DIR: /Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.8/lib
+        uses: messense/maturin-action@v1
+        with:
+          args: --release --universal2 --out dist --no-sdist -m python/Cargo.toml
+      - name: Install built wheel - universal2
         run: |
-          # Build wheels
-          maturin build -i python --release --universal2 --out dist --no-sdist -m python/Cargo.toml
           pip install fat-macho --no-index --find-links dist --force-reinstall
           python -c "import fat_macho"
       - name: Upload wheels
@@ -55,20 +54,21 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.6
+          python-version: 3.9
           architecture: ${{ matrix.platform.python-architecture }}
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: ${{ matrix.platform.target }}
           profile: minimal
           default: true
-      - name: Install maturin
-        run: pip install maturin
       - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist --no-sdist -m python/Cargo.toml
+      - name: Install built wheel
         run: |
-          maturin build -i python --release --out dist --no-sdist -m python/Cargo.toml --target ${{ matrix.platform.target }}
           pip install fat-macho --no-index --find-links dist --force-reinstall
           python -c "import fat_macho"
       - name: Upload wheels
@@ -81,32 +81,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [
-          { manylinux: '2010', target: "x86_64-unknown-linux-gnu", arch: "x86_64" },
-          { manylinux: '2010', target: "i686-unknown-linux-gnu", arch: "i686" },
-        ]
+        target:
+          - x86_64-unknown-linux-gnu
+          - i686-unknown-linux-gnu
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.6
+        python-version: 3.9
         architecture: x64
     - name: Build Wheels
+      uses: messense/maturin-action@v1
+      with:
+        target: ${{ matrix.target }}
+        manylinux: auto
+        args: --release --out dist --no-sdist -m python/Cargo.toml
+    - name: Install built wheel
+      if: matrix.target == 'x86_64-unknown-linux-gnu'
       run: |
-        echo 'curl --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
-        source ~/.cargo/env
-        export PATH=/opt/python/cp38-cp38/bin:$PATH
-        pip install maturin
-        maturin build -i python --release --out dist --no-sdist -m python/Cargo.toml --target ${{ matrix.platform.target }} --manylinux ${{ matrix.platform.manylinux }}
         pip install fat-macho --no-index --find-links dist --force-reinstall
         python -c "import fat_macho"
-        ' > build-wheel.sh
-
-        docker run --rm -v "$PWD":/io -w /io quay.io/pypa/manylinux${{ matrix.platform.manylinux }}_${{ matrix.platform.arch }} bash build-wheel.sh
-    - name: Auditwheel Symbols
-      run: |
-        pip install auditwheel-symbols
-        auditwheel-symbols dist/*.whl
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
@@ -118,23 +112,23 @@ jobs:
     strategy:
       matrix:
         platform: [
-          { manylinux: "2014", target: "aarch64-unknown-linux-gnu", arch: "aarch64" },
-          { manylinux: "2014", target: "armv7-unknown-linux-gnueabihf", arch: "armv7" },
+          { target: "aarch64-unknown-linux-gnu", arch: "aarch64" },
+          { target: "armv7-unknown-linux-gnueabihf", arch: "armv7" },
+          { target: "s390x-unknown-linux-gnu", arch: "s390x" },
+          { target: "powerpc64le-unknown-linux-gnu", arch: "ppc64le" },
         ]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.6
+        python-version: 3.9
     - name: Build Wheels
-      run: |
-        echo 'curl -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
-        source ~/.cargo/env
-        rustup target add ${{ matrix.platform.target }}
-        maturin build -i python --release --out dist --no-sdist -m python/Cargo.toml --target ${{ matrix.platform.target }} --manylinux ${{ matrix.platform.manylinux }}
-        ' > build-wheel.sh
-
-        docker run --rm -v "$PWD":/io -w /io messense/manylinux2014-cross:${{ matrix.platform.arch }} bash build-wheel.sh
+      uses: messense/maturin-action@v1
+      with:
+        maturin-version: 'v0.10.5-beta.4'
+        target: ${{ matrix.platform.target }}
+        manylinux: auto
+        args: --release --out dist --no-sdist -m python/Cargo.toml
     - uses: uraimo/run-on-arch-action@v2.0.5
       name: Install built wheel
       with:
@@ -152,16 +146,11 @@ jobs:
           ls -lrth /artifacts
           pip3 install fat-macho --no-index --find-links /artifacts --force-reinstall
           python3 -c "import fat_macho"
-    - name: Auditwheel Symbols
-      run: |
-        pip install auditwheel-symbols
-        auditwheel-symbols dist/*.whl
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
         name: wheels
         path: dist
-
 
   release:
     name: Release
@@ -180,5 +169,5 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          pip install --upgrade wheel pip setuptools twine
+          pip install --upgrade twine
           twine upload --skip-existing *
