--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,6 +33,8 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+      - run: cargo clean
+        if: matrix.os == 'ubuntu-latest'
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
