--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -21,4 +21,4 @@ fat-macho-rs = { package = "fat-macho", version = "0.4.3" }
 pyo3 = { version = "0.13.2", features = ["abi3-py36", "extension-module"] }
 
 [package.metadata.maturin]
-name = "fat-macho"
+name = "fat_macho"
