Build ppc64 wheel

--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -116,6 +116,7 @@ jobs:
           { target: "armv7-unknown-linux-gnueabihf", arch: "armv7" },
           { target: "s390x-unknown-linux-gnu", arch: "s390x" },
           { target: "powerpc64le-unknown-linux-gnu", arch: "ppc64le" },
+          { target: "powerpc64-unknown-linux-gnu", arch: "ppc64" },
         ]
     steps:
     - uses: actions/checkout@v2
@@ -130,6 +131,7 @@ jobs:
         manylinux: auto
         args: --release --out dist --no-sdist -m python/Cargo.toml
     - uses: uraimo/run-on-arch-action@v2.0.5
+      if: matrix.platform.arch != 'ppc64'
       name: Install built wheel
       with:
         arch: ${{ matrix.platform.arch }}
