Upgrade to pyo3 0.16

--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -23,7 +23,7 @@ jobs:
         uses: messense/maturin-action@v1
         with:
           target: x86_64-apple-darwin
-          args: --release --out dist -m python/Cargo.toml
+          args: --release --sdist --out dist -m python/Cargo.toml
       - name: Install built wheel - x86_64
         run: |
           pip install fat-macho --no-index --find-links dist --force-reinstall
@@ -31,7 +31,7 @@ jobs:
       - name: Build wheels - universal2
         uses: messense/maturin-action@v1
         with:
-          args: --release --universal2 --out dist --no-sdist -m python/Cargo.toml
+          args: --release --universal2 --out dist -m python/Cargo.toml
       - name: Install built wheel - universal2
         run: |
           pip install fat-macho --no-index --find-links dist --force-reinstall
@@ -66,7 +66,7 @@ jobs:
         uses: messense/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --no-sdist -m python/Cargo.toml
+          args: --release --out dist -m python/Cargo.toml
       - name: Install built wheel
         run: |
           pip install fat-macho --no-index --find-links dist --force-reinstall
@@ -95,7 +95,7 @@ jobs:
       with:
         target: ${{ matrix.target }}
         manylinux: auto
-        args: --release --out dist --no-sdist -m python/Cargo.toml
+        args: --release --out dist -m python/Cargo.toml
     - name: Install built wheel
       if: matrix.target == 'x86_64-unknown-linux-gnu'
       run: |
@@ -132,7 +132,7 @@ jobs:
       with:
         target: ${{ matrix.platform.target }}
         manylinux: auto
-        args: --release --out dist --no-sdist -m python/Cargo.toml
+        args: --release --out dist -m python/Cargo.toml
     - uses: uraimo/run-on-arch-action@v2.0.5
       if: matrix.platform.arch != 'ppc64'
       name: Install built wheel
@@ -171,7 +171,7 @@ jobs:
       with:
         target: ${{ matrix.target }}
         manylinux: musllinux_1_2
-        args: --release --out dist --no-sdist -m python/Cargo.toml
+        args: --release --out dist -m python/Cargo.toml
     - name: Install built wheel
       if: matrix.target == 'x86_64-unknown-linux-musl'
       uses: addnab/docker-run-action@v3
@@ -209,7 +209,7 @@ jobs:
       with:
         target: ${{ matrix.platform.target }}
         manylinux: musllinux_1_2
-        args: --release --out dist --no-sdist -m python/Cargo.toml
+        args: --release --out dist -m python/Cargo.toml
     - uses: uraimo/run-on-arch-action@master
       name: Install built wheel
       with:
