--- a/.github/workflows/Python.yml
+++ b/.github/workflows/Python.yml
@@ -205,7 +205,7 @@ jobs:
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         uses: PyO3/maturin-action@v1
         env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_PASSWORD }}
         with:
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
